--- a/src/exercise-catalog/exercise-catalog.component.html
+++ b/src/exercise-catalog/exercise-catalog.component.html
@@ -7,36 +7,42 @@
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.exercise}} </td>
   </ng-container>
 
   <!-- Exercise Group Column -->
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef> Category </th>
-    <td mat-cell *matCellDef="let element"> {{getCategoryLabel(element.category)}} </td>
+  <ng-container matColumnDef="primary">
+    <th mat-header-cell *matHeaderCellDef> Primary Muscle </th>
+    <td mat-cell *matCellDef="let element"> {{element.primary_muscle}} </td>
   </ng-container>
 
   <!-- Muscle Group Column -->
-  <ng-container matColumnDef="group">
-    <th mat-header-cell *matHeaderCellDef> Muscle Group </th>
-    <td mat-cell *matCellDef="let element"> {{getMuscleGroupLabel(element.group)}} </td>
+  <ng-container matColumnDef="secondary">
+    <th mat-header-cell *matHeaderCellDef> Secondary Muscle </th>
+    <td mat-cell *matCellDef="let element"> {{element.secondary_muscle}} </td>
   </ng-container>
 
-  <!-- Checkbox Column -->
-  <ng-container matColumnDef="select">
-    <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox (change)="$event ? masterToggle() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()">
-      </mat-checkbox>
-    </th>
-    <td mat-cell *matCellDef="let row">
-      <mat-checkbox (click)="$event.stopPropagation()"
-                    (change)="$event ? selection.toggle(row) : null"
-                    [checked]="selection.isSelected(row)">
-      </mat-checkbox>
-    </td>
+  <!-- Short Video Link -->
+  <ng-container matColumnDef="shortVideo">
+    <th mat-header-cell *matHeaderCellDef> Short Video </th>
+    <td mat-cell *matCellDef="let element"> <a href="{{element.short_video}}">link</a> </td>
   </ng-container>
+
+<!--  &lt;!&ndash; Checkbox Column &ndash;&gt;-->
+<!--  <ng-container matColumnDef="select">-->
+<!--    <th mat-header-cell *matHeaderCellDef>-->
+<!--      <mat-checkbox (change)="$event ? masterToggle() : null"-->
+<!--                    [checked]="selection.hasValue() && isAllSelected()"-->
+<!--                    [indeterminate]="selection.hasValue() && !isAllSelected()">-->
+<!--      </mat-checkbox>-->
+<!--    </th>-->
+<!--    <td mat-cell *matCellDef="let row">-->
+<!--      <mat-checkbox (click)="$event.stopPropagation()"-->
+<!--                    (change)="$event ? selection.toggle(row) : null"-->
+<!--                    [checked]="selection.isSelected(row)">-->
+<!--      </mat-checkbox>-->
+<!--    </td>-->
+<!--  </ng-container>-->
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"
