added workout catalog and drop down menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
-  <app-exercise-details></app-exercise-details>
-  <app-exercise-catalog></app-exercise-catalog>
+<!--  <app-exercise-details></app-exercise-details>-->
+<!--  <app-exercise-catalog></app-exercise-catalog>-->
+  <app-workout-catalog></app-workout-catalog>
 </div>
