--- a/src/new-workout/new-workout.component.html
+++ b/src/new-workout/new-workout.component.html
@@ -1,13 +1,12 @@
-
-<h2 mat-dialog-title>Add Exercise</h2>
+<h2 mat-dialog-title>Workout Builder</h2>
 <mat-dialog-content style="display:flex;flex-direction:column;align-items:flex-start">
 
   <mat-form-field>
-    <input matInput type="text" placeholder="Exercise Name" #exerciseName>
+    <input matInput type="text" placeholder="Workout Name" #workoutName>
   </mat-form-field>
 
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="{name: exerciseName.value}">Save</button>
+  <button mat-button [mat-dialog-close]="{name: workoutName.value}">Save</button>
 </mat-dialog-actions>
