--- a/src/workout-catalog/workout-catalog.component.css
+++ b/src/workout-catalog/workout-catalog.component.css
@@ -30,13 +30,13 @@ tr.workout-row:not(.expanded-row):active{
 }
 
 .workout-row-header{
-  background: gray;
-  font-size: 1.1em;
+  background: #b0b0b0;
+  font-size: 2.0em;
   font-weight:bold;
 }
 
-.superset-edge{
-  border-top-color:red;
-  border-bottom: red;
+
+.superset{
+  font-size: 2.0em;
 }
 
