--- a/src/workout-catalog/workout-catalog.component.html
+++ b/src/workout-catalog/workout-catalog.component.html
@@ -21,6 +21,20 @@
     <td mat-cell *matCellDef="let element"> {{element.type}} </td>
   </ng-container>
 
+
+  <!-- Created By Column -->
+  <ng-container matColumnDef="createdBy">
+    <th mat-header-cell *matHeaderCellDef> Created By </th>
+    <td mat-cell *matCellDef="let element"> {{element.created_by}} </td>
+  </ng-container>
+
+  <!-- Created On Column -->
+  <ng-container matColumnDef="createdOn">
+    <th mat-header-cell *matHeaderCellDef> Created On </th>
+    <td mat-cell *matCellDef="let element"> {{element.created_on}} </td>
+  </ng-container>
+
+
   <!-- Last Completed -->
   <ng-container matColumnDef="last_completed">
     <th mat-header-cell *matHeaderCellDef> Last Completed </th>
@@ -33,18 +47,24 @@
     <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
       <div class="workout-detail"
            [@detailExpand]="element == expandedWorkout ? 'expanded' : 'collapsed'">
-        <mat-grid-list cols="5" rowHeight="2:1">
+        <mat-grid-list cols="6" rowHeight="3:1">
 
           <mat-grid-tile class="workout-row-header">Exercise</mat-grid-tile>
           <mat-grid-tile class="workout-row-header">Rest</mat-grid-tile>
           <mat-grid-tile class="workout-row-header">Reps</mat-grid-tile>
           <mat-grid-tile class="workout-row-header">Tempo</mat-grid-tile>
           <mat-grid-tile class="workout-row-header">Sets</mat-grid-tile>
-
+          <mat-grid-tile class="workout-row-header">Special Notes</mat-grid-tile>
 
           @for(display of displayWorkout(element);track $index){
-<!--              <mat-grid-tile class="superset-edge"> {{display}} </mat-grid-tile>-->
-              <mat-grid-tile> {{display}} </mat-grid-tile>
+            @if(display == "WARMUP" || display == "END WARMUP" || display == "SUPERSET" || display == "END SUPERSET"){
+                <hr>
+                {{setColor(display)}}
+              }
+            @else{
+                <mat-grid-tile [style.background]="supersetColor" class="superset" (click)="highlight($any($event.target).textContent)"> {{display}} </mat-grid-tile>
+              }
+
 
           }
 
