routing and building workout builder:

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div>
 <!--  <app-exercise-details></app-exercise-details>-->
 <!--  <app-exercise-catalog></app-exercise-catalog>-->
-  <app-workout-catalog></app-workout-catalog>
+<!--  <app-workout-catalog></app-workout-catalog>-->
+  <app-nav-pane></app-nav-pane>
+
 </div>
