--- a/src/new-workout/new-workout.component.html
+++ b/src/new-workout/new-workout.component.html
@@ -19,85 +19,108 @@
     <mat-grid-tile [colspan]="4"></mat-grid-tile>
 
 
-  <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Exercise</mat-grid-tile>
-  <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Rest</mat-grid-tile>
-  <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Reps</mat-grid-tile>
-  <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Tempo</mat-grid-tile>
-  <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Sets</mat-grid-tile>
-  <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Special Notes</mat-grid-tile>
+    <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Exercise</mat-grid-tile>
+    <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Rest</mat-grid-tile>
+    <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Reps</mat-grid-tile>
+    <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Tempo</mat-grid-tile>
+    <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Sets</mat-grid-tile>
+    <mat-grid-tile class="workout-row-header" style="border:solid 2px #000">Special Notes</mat-grid-tile>
   </mat-grid-list>
   <hr style="clear:both;visibility:hidden">
 
+  <mat-grid-list cols="6" rowHeight="5:1">
+
+  <mat-grid-tile>
+    <div style="width:100%;display:flex;flex-direction:row;align-items: center">
+      <p>Warmup</p>
+    </div>
+  </mat-grid-tile>
+
+  <mat-grid-tile [colspan]="3"></mat-grid-tile>
+    <mat-grid-tile [colspan]="1">
+        <button mat-raised-button style="width:95%;height:50%;align-content:center;" (click)="removeWarmupEx()">Remove Exercise</button>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1">
+      <button mat-raised-button style="width:100%;height:50%;align-content:center;" (click)="addWarmupEx()">Add Exercise</button>
+    </mat-grid-tile>
+  </mat-grid-list>
+
   <mat-grid-list cols="6" rowHeight="3:1">
-  @for(item of [].constructor(6);track item){
+  @for(k of [].constructor(warmupExCount);track k){
+    @for(item of [].constructor(6);track item;let i = $index){
     <mat-grid-tile style="text-align:right">
-      <mat-form-field style="width:98%;height:98%;text-align:right">
-        <input matInput style="width:98%;height:98%" type="text" placeholder="">
+      <mat-form-field style="width:99%;height:100%;text-align:right">
+        @if(i == 0){
+        <input type="text"
+               placeholder="Exercise"
+               aria-label="Exercise"
+               matInput
+               [formControl]="myControl"
+               [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete">
+          @for(ex of exList;track ex){
+        <mat-option [value]="ex.exercise">{{ex.exercise}}</mat-option>
+        }
+        </mat-autocomplete>
+        }
+        @else{
+        <input matInput style="width:99%;height:100%" type="text" placeholder="">
+        }
+
       </mat-form-field>
     </mat-grid-tile>
-  }
+     }
+    }
   </mat-grid-list>
-<!--  <mat-grid-list cols="8" rowHeight="2:1">-->
-<!--    <mat-grid-tile [colspan]="6" [rowspan]="10">-->
-
-<!--      <div style="display:flex;flex-direction:column;align-items:flex-start">-->
-<!--        <mat-form-field>-->
-<!--          <input matInput type="text" placeholder="Workout Name" #workoutName>-->
-<!--        </mat-form-field>-->
-
-<!--        <mat-form-field>-->
-<!--          <input matInput type="text" placeholder="Created By" #createdBy>-->
-<!--        </mat-form-field>-->
-
-<!--        <mat-grid-list cols="6" rowHeight="3:1">-->
-<!--        @for(item of [].constructor(supersetCount);track item;let i = $index){-->
-<!--          @if(i == 0){-->
-<!--              <mat-grid-tile class="workout-row-header">Exercise</mat-grid-tile>-->
-<!--              <mat-grid-tile class="workout-row-header">Rest</mat-grid-tile>-->
-<!--              <mat-grid-tile class="workout-row-header">Reps</mat-grid-tile>-->
-<!--              <mat-grid-tile class="workout-row-header">Tempo</mat-grid-tile>-->
-<!--              <mat-grid-tile class="workout-row-header">Sets</mat-grid-tile>-->
-<!--              <mat-grid-tile class="workout-row-header">Special Notes</mat-grid-tile>-->
-<!--              <hr>-->
-<!--            }-->
-<!--          <h2>Superset #{{i}}</h2>-->
-<!--&lt;!&ndash;          <div cdkDropListGroup&ndash;&gt;-->
-<!--&lt;!&ndash;               [cdkDropListData]="supersets"&ndash;&gt;-->
-<!--&lt;!&ndash;               (cdkDropListDropped) = "drop($event)">&ndash;&gt;-->
-<!--&lt;!&ndash;               @for(ex of supersets[i];track item){&ndash;&gt;-->
-<!--&lt;!&ndash;                  <div cdkDrag>{{ex.name}}</div>&ndash;&gt;-->
-<!--&lt;!&ndash;                }&ndash;&gt;-->
-<!--&lt;!&ndash;         </div>&ndash;&gt;-->
 
 
-<!--        }-->
-<!--        </mat-grid-list>-->
-<!--      </div>-->
+<!--  Supersets  -->
+  @for(item of [].constructor(supersetCount);track item;let i = $index){
+  <mat-grid-list cols="6" rowHeight="5:1">
+  <mat-grid-tile>
+      <div style="width:100%;display:flex;flex-direction:row;align-items: center">
+        <p>Superset {{i+1}}</p>
+        </div>
+    </mat-grid-tile>
 
+    <mat-grid-tile [colspan]="3"></mat-grid-tile>
+    <mat-grid-tile [colspan]="1">
+        <button mat-raised-button style="width:95%;height:50%;align-content:center;" (click)="removeEx()">Remove Exercise</button>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1">
+      <button mat-raised-button style="width:100%;height:50%;align-content:center;" (click)="addEx()">Add Exercise</button>
+    </mat-grid-tile>
+    </mat-grid-list>
 
+    <mat-grid-list cols="6" rowHeight="3:1">
+    @for(k of [].constructor(superset1ExCount);track k){
+      @for(item of [].constructor(6);track item;let i = $index){
+      <mat-grid-tile style="text-align:right">
+        <mat-form-field style="width:99%;height:100%;text-align:right">
+          @if(i == 0){
+      <input type="text"
+             placeholder="Exercise"
+             aria-label="Exercise"
+             matInput
+             [formControl]="myControl"
+             [matAutocomplete]="auto">
+      <mat-autocomplete #auto="matAutocomplete">
+        @for(ex of exList;track ex){
+        <mat-option [value]="ex.exercise">{{ex.exercise}}</mat-option>
+        }
+      </mat-autocomplete>
+      }
+      @else{
+      <input matInput style="width:99%;height:100%" type="text" placeholder="">
+      }
 
-<!--    </mat-grid-tile>-->
+      </mat-form-field>
+    </mat-grid-tile>
+      }
+    }
+    </mat-grid-list>
 
-<!--&lt;!&ndash;    Pending Exercises &ndash;&gt;-->
-<!--    <mat-grid-tile [colspan]="2" [rowspan]="10" class="pending-ex-group">-->
-<!--      <div cdkDropListGroup>-->
-<!--        <h2>Tabled Exercises</h2>-->
-<!--        <div cdkDropList-->
-<!--             [cdkDropListData]="pendingExercises"-->
-<!--             class="pending-exercises"-->
-<!--             (cdkDropListDropped) = "drop($event)">-->
-
-<!--          @for(ex of pendingExercises;track ex){-->
-<!--            <div cdkDrag>{{ex.name}}</div>-->
-<!--          }-->
-
-
-<!--        </div>-->
-<!--      </div>-->
-<!--    </mat-grid-tile>-->
-
-
-<!--  </mat-grid-list>-->
+  }
 
 
 
