--- a/src/workout-catalog/workout-catalog.component.css
+++ b/src/workout-catalog/workout-catalog.component.css
@@ -38,5 +38,12 @@ tr.workout-row:not(.expanded-row):active{
 
 .superset{
   font-size: 2.0em;
+  background: #ffb888;
 }
-
+.warmup{
+  background: #fd934d;
+}
+hr {
+  clear: both;
+  visibility: hidden;
+}
