--- a/src/dashboard/calendar-event-dialog.component.css
+++ b/src/dashboard/calendar-event-dialog.component.css
@@ -1,3 +1,12 @@
+/*button {*/
+/*  margin-right: 8px;*/
+/*}*/
+/*:host {*/
+/*  display: flex;*/
+/*  flex-direction: row;*/
+/*  align-items: flex-start;*/
+/*}*/
+
 .workout-row td {
   border-bottom-width: 0;
 }
