--- a/src/session-recorder/session-recorder.component.html
+++ b/src/session-recorder/session-recorder.component.html
@@ -2,39 +2,106 @@
 <h1>Name: {{this.workout.name}}</h1>
 <h3>Created By: {{this.workout.created_by}}</h3>
 
-<mat-grid-list cols="6" rowHeight="3:1">
 
+
+<mat-grid-list cols="6" rowHeight="3:1">
+  <mat-grid-tile [colspan]="6">WARMUP</mat-grid-tile>
   <mat-grid-tile class="workout-row-header">Exercise</mat-grid-tile>
   <mat-grid-tile class="workout-row-header">Rest</mat-grid-tile>
   <mat-grid-tile class="workout-row-header">Reps</mat-grid-tile>
   <mat-grid-tile class="workout-row-header">Tempo</mat-grid-tile>
   <mat-grid-tile class="workout-row-header">Sets</mat-grid-tile>
   <mat-grid-tile class="workout-row-header">Special Notes</mat-grid-tile>
-  <hr>
+
   @for(ex of this.workout.warmup;track ex.id;let i = $index){
-  <mat-grid-tile class="warmup">{{ex.name}}</mat-grid-tile>
-              <mat-grid-tile class="warmup">{{ex.rest}}</mat-grid-tile>
-              <mat-grid-tile class="warmup">{{ex.reps}}</mat-grid-tile>
-              <mat-grid-tile class="warmup">{{ex.tempo}}</mat-grid-tile>
-              <mat-grid-tile class="warmup">{{ex.sets}}</mat-grid-tile>
-              <mat-grid-tile class="warmup">{{ex.special_notes}}</mat-grid-tile>
+    <mat-grid-tile class="warmup">{{ex.name}}</mat-grid-tile>
+    <mat-grid-tile class="warmup">{{ex.rest}}</mat-grid-tile>
+    <mat-grid-tile class="warmup">{{ex.reps}}</mat-grid-tile>
+    <mat-grid-tile class="warmup">{{ex.tempo}}</mat-grid-tile>
+    <mat-grid-tile class="warmup">{{ex.sets}}</mat-grid-tile>
+    <mat-grid-tile class="warmup">{{ex.special_notes}}</mat-grid-tile>
+    @for(k of [].constructor(this.getSetCountInt(ex.sets));track $index){
+      <mat-grid-tile>Set: {{$index+1}}</mat-grid-tile>
+      <mat-grid-tile></mat-grid-tile>
+      <mat-grid-tile [colspan]=2>
+        <div class="input-field">
+          <mat-form-field>
+            <input matInput type="number" placeholder="Weight" [(ngModel)]="this.workoutResults.results[this.resultIndex].weight[k]">
+          </mat-form-field>
+        </div>
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]=2>
+        <div class="input-field">
+          <mat-form-field>
+            <input matInput type="number" placeholder="Reps" [(ngModel)]="this.workoutResults.results[this.resultIndex].reps[k]">
+          </mat-form-field>
+        </div>
+      </mat-grid-tile>
+<!--      <mat-grid-tile>-->
+<!--        <div class="input-field">-->
+<!--          <mat-form-field>-->
+<!--            <input matInput type="number" placeholder="Notes" [(ngModel)]="this.workoutResults.results[this.resultIndex].weight[k]">-->
+<!--          </mat-form-field>-->
+<!--        </div>-->
+<!--      </mat-grid-tile>-->
+    }
+    @if(i != this.workout.warmup.length){
+    <mat-grid-tile [colspan]="6"></mat-grid-tile>
+    }
 
   }
 
 </mat-grid-list>
 <hr>
+<hr>
 
 @for(superset of this.workout.supersets;track $index){
-<mat-grid-list cols="6" rowHeight="3:1">
-@for(ex of superset;track ex.id;let i = $index){
-<mat-grid-tile class="superset">{{ex.name}}</mat-grid-tile>
-<mat-grid-tile class="superset">{{ex.rest}}</mat-grid-tile>
-<mat-grid-tile class="superset">{{ex.reps}}</mat-grid-tile>
-<mat-grid-tile class="superset">{{ex.tempo}}</mat-grid-tile>
-<mat-grid-tile class="superset">{{ex.sets}}</mat-grid-tile>
-<mat-grid-tile class="superset">{{ex.special_notes}}</mat-grid-tile>
-}
+  <mat-grid-list cols="6" rowHeight="3:1">
+  <mat-grid-tile [colspan]="6">SUPERSET {{$index+1}}</mat-grid-tile>
+  <mat-grid-tile class="workout-row-header">Exercise</mat-grid-tile>
+  <mat-grid-tile class="workout-row-header">Rest</mat-grid-tile>
+  <mat-grid-tile class="workout-row-header">Reps</mat-grid-tile>
+  <mat-grid-tile class="workout-row-header">Tempo</mat-grid-tile>
+  <mat-grid-tile class="workout-row-header">Sets</mat-grid-tile>
+  <mat-grid-tile class="workout-row-header">Special Notes</mat-grid-tile>
+  @for(ex of superset;track ex.id;let i = $index){
+  <mat-grid-tile class="superset">{{ex.name}}</mat-grid-tile>
+  <mat-grid-tile class="superset">{{ex.rest}}</mat-grid-tile>
+  <mat-grid-tile class="superset">{{ex.reps}}</mat-grid-tile>
+  <mat-grid-tile class="superset">{{ex.tempo}}</mat-grid-tile>
+  <mat-grid-tile class="superset">{{ex.sets}}</mat-grid-tile>
+  <mat-grid-tile class="superset">{{ex.special_notes}}</mat-grid-tile>
+    @for(k of [].constructor(this.getSetCountInt(ex.sets));track $index){
+    <mat-grid-tile>Set: {{$index+1}}</mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
+        <mat-grid-tile [colspan]=2>
+          <div class="input-field">
+            <mat-form-field>
+              <input matInput type="number" placeholder="Weight" [(ngModel)]="this.workoutResults.results[this.resultIndex].weight[k]">
+            </mat-form-field>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]=2>
+          <div class="input-field">
+            <mat-form-field>
+              <input matInput type="number" placeholder="Reps" [(ngModel)]="this.workoutResults.results[this.resultIndex].reps[k]">
+            </mat-form-field>
+          </div>
+        </mat-grid-tile>
+  <!--      <mat-grid-tile>-->
+  <!--        <div class="input-field">-->
+  <!--          <mat-form-field>-->
+  <!--            <input matInput type="number" placeholder="Notes" [(ngModel)]="this.workoutResults.results[this.resultIndex].weight[k]">-->
+  <!--          </mat-form-field>-->
+  <!--        </div>-->
+  <!--      </mat-grid-tile>-->
+    }
+  }
 </mat-grid-list>
 <hr>
+<hr>
 }
+
+<button mat-button>Exit</button>
+<button mat-button (click)="saveSession()">Save</button>
 </div>
